Created some links to CloudVPS / N2

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
 <a name="opticon-server-metering-for-openstack" class="anchor" href="#opticon-server-metering-for-openstack"><span class="octicon octicon-link"></span></a>Opticon Server Metering for OpenStack</h1>
 
-<p>Opticon is the CloudVPS successor to its N2 monitoring service: A way of keeping
+<p>Opticon is the <a href="https://www.cloudvps.com">CloudVPS</a> successor to its <a href="http://opensource.cloudvps.com/n2/">N2</a> monitoring service: A way of keeping
 tabs on what your servers are doing for purposes of monitoring, performance
 analysis and incident forensics. Opticon is designed to be used in conjunction
 with the OpenStack Compute service, but can be operated independently.</p>
